# c_template

./: CMakeLists.txt
src/: main.c
